--- a/index.adoc
+++ b/index.adoc
@@ -13,12 +13,12 @@ This is the course material I created for the cross-platform development class. 
 
 link:dsrt-course-2015.html[Read one page version]
 
-1. link:0-introduction.html[Introduction]
-2. link:0-user-interface-design.html[User interface design]
-3. link:0-jquery-mobile.html[jQuery Mobile]
-4. link:0-getting-sensor-value.html[Getting sensor value]
-5. link:0-rain-or-not.html[Rain or not]
-6. link:0-offline-and-storage.html[Offline and storage]
-7. link:0-react.html[React]
-8. link:0-desktop-web-app.html[Desktop web app]
-9. link:0-web-accessibility.html[Web Accessibility]
+1. link:introduction/index.html[Introduction]
+2. link:user-interface-design/index.html[User interface design]
+3. link:jquery-mobile/index.html[jQuery Mobile]
+4. link:getting-sensor-value/index.html[Getting sensor value]
+5. link:rain-or-not/index.html[Rain or not]
+6. link:offline-and-storage/index.html[Offline and storage]
+7. link:react/index.html[React]
+8. link:desktop-web-app/index.html[Desktop web app]
+9. link:web-accessibility/index.html[Web Accessibility]
