--- a/book copy/05-rain-or-not/homescreen-configuration.adoc
+++ b/book copy/05-rain-or-not/homescreen-configuration.adoc
@@ -4,7 +4,7 @@ Making an app icon for your web app
 
 We can further improve our application by adding an icon for the homescreen. This is done by adding some meta data.
 
-Apple introduces this capability first. It is done by using several link and meta tags:
+Apple introduce this capability first. It is done by using several link and meta tags:
 
 [source,html]
 ----
@@ -95,10 +95,11 @@ Since there are so many conflagrations to set up, the latest version of Google C
 }
 ----
 
-You may find the official documentation in the following Apple site and the Chrome developer site.
+You may find The office of documentation in the following Apple site and the Chrome developer site.
 
 https://developer.apple.com/library/ios/documentation/AppleApplications/Reference/SafariWebContent/ConfiguringWebApplications/ConfiguringWebApplications.html[Apple Developer Site]
 
 https://developer.chrome.com/multidevice/android/installtohomescreen[Chrome Developer Site]
+
 
 Also, here is http://www.mobilexweb.com/blog/home-screen-web-apps-android-chrome-31[a useful tutorial to setup homescreen app for both iOS and Android].
