--- a/dsrt-course-2015.adoc
+++ b/dsrt-course-2015.adoc
@@ -22,7 +22,7 @@ include::book/05-rain-or-not/05-rain-or-not.adoc[leveloffset=+1]
 
 include::book/06-offline-and-storage/06-offline-and-storage.adoc[leveloffset=+1]
 
-include::book/0x-react/0x-react.adoc[leveloffset=+1]
+include::book/07-react/07-react.adoc[leveloffset=+1]
 
 include::book/0x-desktop-web-app/0x-desktop-web-app.adoc[leveloffset=+1]
 
