Add React example.

--- a/book/01-introduction/basecamp-hybrid.adoc
+++ b/book/01-introduction/basecamp-hybrid.adoc
@@ -1,4 +1,4 @@
-== Case study—Basecamp for mobile
+== Case study―Basecamp for mobile
 
 1. Pure server side render
 2. Then client capture the request and create the iOS view hierarchy.
