--- a/book/07-react/react-native.adoc
+++ b/book/07-react/react-native.adoc
@@ -1,3 +1,5 @@
+== React Native
+
 React native is a framework to let you describe the native app user interface in JSX-like format. It also allows using CSS-like stylesheet with Flexbox properties to layout the UI components.
 
 For example, we can use <ListView> to represent a list of collection. In iOS, the react-native component will use the native UITableView. In Android, it will use the native ListView.
@@ -10,19 +12,19 @@ For each cell, we define how the cell layout by using the Flexbox component.
 
 We also defines what happens when each cell is tapped. For example, we tells the navigation controller to push to the next view with content of the selected cell.
 
-Observation
+=== Observation
 
 You can see that it’s very easy to create a table view for both Android and iOS.
 
 But when we need to create something that’s not as usual? For example, when we need to trigger some heavy logic when we turn on a switch in the table view cell1? 
 
-The benefits
+=== The benefits
 
 - React Native allows us to use the web-like method to describe the interface. This creates a no barrier for web designers to write their app.
 - The same JSX file can be transpile into both iOS and Android native UI components. It encourages more code sharing between the platform.
 - The same JSX definition for both platform helps creating a universal UI language. It helps forming a community.
 
-The concerns
+=== The concerns
 
 - React-native adds a layer on top of the native components, which may increase the complexity. For example, debugging may be harder when things not work as designed.
 - The React team, or someone, have to decide what and how the UI components to include into the React components. It means when a new UI component is introduced, we need to wait until the React-native supports it.
