--- a/index.adoc
+++ b/index.adoc
@@ -20,8 +20,8 @@ link:dsrt-course-2015.html[Read one page version]
 5. link:05-rain-or-not.html[Rain or not]
 6. link:06-offline-and-storage.html[Offline and storage]
 7. link:07-react.html[React]
-8. link:0x-desktop-web-app.html[Desktop web app]
-9. link:0x-web-accessibility.html[Web Accessibility]
+8. link:08-desktop-web-app.html[Desktop web app]
+9. link:09-web-accessibility.html[Web Accessibility]
 
 
 == Download eBook
